@@ -338,10 +338,10 @@
 #define DCIDESC_DEPRECATED                        _T("<deprecated>")
 
 
-#define DCTDESC_AGENT_SUBAGENTS                   _T("Load subagents")
+#define DCTDESC_AGENT_SUBAGENTS                   _T("Loaded subagents")
 #define DCTDESC_FILESYSTEM_VOLUMES                _T("File system volumes")
 #define DCTDESC_SYSTEM_INSTALLED_PRODUCTS         _T("Installed products")
-#define DCTDESC_SYSTEM_PROCESSES                  _T("Process table")
+#define DCTDESC_SYSTEM_PROCESSES                  _T("Processes")
 
 /**
  * Subagent's parameter information
