@@ -73,6 +73,104 @@ LONG H_ServiceState(const TCHAR *cmd, const TCHAR *arg, TCHAR *value)
 }
 
 /**
+ * Handler for System.Services list
+ */
+LONG H_ServiceList(const TCHAR *pszCmd, const TCHAR *pArg, StringList *value)
+{
+   SC_HANDLE hManager = OpenSCManager(NULL, NULL, GENERIC_READ);
+   if (hManager == NULL)
+   {
+      return SYSINFO_RC_ERROR;
+   }
+
+   LONG rc = SYSINFO_RC_ERROR;
+   DWORD bytes, count;
+   EnumServicesStatusEx(hManager, SC_ENUM_PROCESS_INFO, SERVICE_WIN32, SERVICE_STATE_ALL, NULL, 0, &bytes, &count, NULL, NULL);
+   if (GetLastError() == ERROR_MORE_DATA)
+   {
+      ENUM_SERVICE_STATUS_PROCESS *services = (ENUM_SERVICE_STATUS_PROCESS *)malloc(bytes);
+      if (EnumServicesStatusEx(hManager, SC_ENUM_PROCESS_INFO, SERVICE_WIN32, SERVICE_STATE_ALL, (BYTE *)services, bytes, &bytes, &count, NULL, NULL))
+      {
+         for(DWORD i = 0; i < count; i++)
+            value->add(services[i].lpServiceName);
+         rc = SYSINFO_RC_SUCCESS;
+      }
+      free(services);
+   }
+
+   CloseServiceHandle(hManager);
+   return rc;
+}
+
+/**
+ * Handler for System.Services table
+ */
+LONG H_ServiceTable(const TCHAR *pszCmd, const TCHAR *pArg, Table *value)
+{
+   SC_HANDLE hManager = OpenSCManager(NULL, NULL, GENERIC_READ);
+   if (hManager == NULL)
+   {
+      return SYSINFO_RC_ERROR;
+   }
+
+   LONG rc = SYSINFO_RC_ERROR;
+   DWORD bytes, count;
+   EnumServicesStatusEx(hManager, SC_ENUM_PROCESS_INFO, SERVICE_WIN32, SERVICE_STATE_ALL, NULL, 0, &bytes, &count, NULL, NULL);
+   if (GetLastError() == ERROR_MORE_DATA)
+   {
+      ENUM_SERVICE_STATUS_PROCESS *services = (ENUM_SERVICE_STATUS_PROCESS *)malloc(bytes);
+      if (EnumServicesStatusEx(hManager, SC_ENUM_PROCESS_INFO, SERVICE_WIN32, SERVICE_STATE_ALL, (BYTE *)services, bytes, &bytes, &count, NULL, NULL))
+      {
+         value->addColumn(_T("NAME"), DCI_DT_STRING, _T("Name"), true);
+         value->addColumn(_T("DISPNAME"), DCI_DT_STRING, _T("Display name"));
+         value->addColumn(_T("TYPE"), DCI_DT_STRING, _T("Type"));
+         value->addColumn(_T("STATE"), DCI_DT_STRING, _T("State"));
+         value->addColumn(_T("PID"), DCI_DT_UINT, _T("PID"));
+         for(DWORD i = 0; i < count; i++)
+         {
+            value->addRow();
+            value->set(0, services[i].lpServiceName);
+            value->set(1, services[i].lpDisplayName);
+            value->set(2, (services[i].ServiceStatusProcess.dwServiceType == SERVICE_WIN32_SHARE_PROCESS) ? _T("Shared") : _T("Own"));
+            switch(services[i].ServiceStatusProcess.dwCurrentState)
+            {
+               case SERVICE_CONTINUE_PENDING:
+                  value->set(3, _T("Continue Pending"));
+                  break;
+               case SERVICE_PAUSE_PENDING:
+                  value->set(3, _T("Pausing"));
+                  break;
+               case SERVICE_PAUSED:
+                  value->set(3, _T("Paused"));
+                  break;
+               case SERVICE_RUNNING:
+                  value->set(3, _T("Running"));
+                  break;
+               case SERVICE_START_PENDING:
+                  value->set(3, _T("Starting"));
+                  break;
+               case SERVICE_STOP_PENDING:
+                  value->set(3, _T("Stopping"));
+                  break;
+               case SERVICE_STOPPED:
+                  value->set(3, _T("Stopped"));
+                  break;
+               default:
+                  value->set(3, (UINT32)services[i].ServiceStatusProcess.dwCurrentState);
+                  break;
+            }
+            value->set(4, (UINT32)services[i].ServiceStatusProcess.dwProcessId);
+         }
+         rc = SYSINFO_RC_SUCCESS;
+      }
+      free(services);
+   }
+
+   CloseServiceHandle(hManager);
+   return rc;
+}
+
+/**
  * Handler for System.ThreadCount
  */
 LONG H_ThreadCount(const TCHAR *cmd, const TCHAR *arg, TCHAR *value)
