@@ -3,7 +3,9 @@
 *
 
 - Improved layer 2 topology discovery performance
+- Special handling of incorrect LLDP data provided by some D-Link switches 
 - Improved file retrieve from agent
+- Windows agent: added service list and service table (System.Services)
 - Management console:
    - Implemented alarm sounds
    - Fixed "broken pipe" errors
